fix spark stream starting status judgement bug

--- a/rider/rider-server/pom.xml
+++ b/rider/rider-server/pom.xml
@@ -45,7 +45,11 @@
             <artifactId>wormhole-kafka-010-2</artifactId>
             <version>${project.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>edp.wormhole</groupId>
+            <artifactId>wormhole-kafka-010</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>edp.wormhole</groupId>
             <artifactId>wormhole-zookeeper</artifactId>
